--- a/style.css
+++ b/style.css
@@ -554,6 +554,69 @@ color: #929292;
   color: #272042;
   font-size: 20px;
 }
+
+/*intructor*/
+.page-instructor {
+margin-top: 30px;
+}
+
+.page-instructor h2{
+  margin-bottom: 20px;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 27px;
+  color: #272042;
+}
+.page-instructor .instructor-comment {
+  margin-bottom: 20px;
+}
+.page-instructor .card img {
+  width: 80px;
+}
+.page-instructor .card .card-body h5 , .page-instructor .card .card-body p , .page-instructor .card .card-body .card-star {
+  text-align: left;
+
+}
+.page-instructor .card .card-body h5 {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #272042;
+}
+.page-instructor .card .card-body p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 20px;
+  color: #8B8BA5; 
+}
+.page-instructor .card-body .card-star {
+  color: #f7c531;
+  font-size: 20px;
+}
+.page-instructor .card-body .card-star span {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px; 
+  color: #272042;
+}
+.page-instructor .card .col-md-2 {
+  width: 5rem;
+}
+.comment-instructor .text-comment-instructor {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 28px;
+  color: #272042;
+}
+.comment-instructor {
+  margin-top: -10px;
+}
+.comment-instructor .comment-rating {
+  margin-top: 15px;
+}
+.comment-instructor .comment-rating .rating {
+  justify-content: left;
+}
 @media (max-width: 991px) {
   .navbar-food .navbar-nav {
     border-radius: 10px;
@@ -574,10 +637,26 @@ color: #929292;
     font-size: 16px;
     line-height: 34px;
   }
+
+  .accordion-item {
+    width: 400px;
+    border: 0px;
+  }
+  .accordion-item .accordion-header {
+    width: 400px;
+  }
+  .accordion-play {
+    width: 380px;
+  }
 }
 @media (max-width: 767px) {
   .hero-title {
     margin-top: 30px;
+  }
+}
+@media (max-width:500px) {
+  .page-instructor .card .col-md-2 {
+    width: 16.66666667%;
   }
 }
 @media (max-width: 430px) {
@@ -608,8 +687,28 @@ color: #929292;
     line-height: 34px;
     color: #8b8ba5;
   }
+  .page-instructor .card .card-body h5 {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 22px;
+    color: #272042;
+  }
+  .page-instructor .card img {
+    width: 60px;
+  }
+
+  .accordion-item {
+    width: 100%
+  }
+  .accordion-item .accordion-header {
+    width: 100%;
+  }
+  .accordion-play {
+    width: 100%;
+  }
 }
 @media (max-width: 360px) {
+ 
   .card-img .video-play {
     top: 14%;
     left: 20%;
