--- a/style-login-register.css
+++ b/style-login-register.css
@@ -86,6 +86,11 @@
     margin-top: -40px;
 }
   /*form*/
+  .page-form .card {
+    margin: 0 auto;
+    border: 0px;
+    width: 20rem;
+  }
   .page-form label{
     font-weight: normal;
     font-size: 16px;
@@ -105,7 +110,7 @@
     display: block;
     position: absolute;
     top: -15px;
-    left: 38%;
+    left: 30%;
     padding: 0px 10px;
     background: #FFFFFF;
     color: #8a8a8a;
@@ -121,13 +126,13 @@
 }
 .action-sosialmedia button img {
     align-items: center;
-    width: 30px;
+    width: 20px;
 }
 .action-sosialmedia button span {
     margin-left: 10px;
     align-self: center;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 16px;
     color: #A9A9A9;
 }
 
@@ -167,3 +172,23 @@
     color: #f7c531;
   }
   
+  /*register*/
+  .page-form h2 {
+    margin-bottom: 50px;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 35px;
+    text-align: center;
+    color: #272042;
+  }
+
+  @media (max-width:767px) {
+    .page-form {
+      margin-top: 60px;
+    }
+  }
+  @media (max-width:400px) {
+    .page-form .card {
+      width: 100%;
+    }
+  }
