--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@
   width: 100%;
   position: relative;
 }
-.video-play:hover img {
+.video-play img:hover {
   cursor: pointer;
 }
 
@@ -89,13 +89,13 @@
   background: url(images/btn-play.svg);
 }
 
-.video-play:hover .video {
+.video-play .video:hover {
   cursor: pointer;
   border: none;
   width: 5rem;
   height: 5rem;
   border-radius: 50%;
-  opacity: 0.6;
+  opacity: 0.7;
 }
 
 .page-hero .hero-title h2 {
@@ -179,18 +179,18 @@
   transition: 0.3s ease-in-out;
 }
 .page-content .card-img:hover img {
-  opacity: 0.2;
+  opacity: 60%;
 }
 .card-img .video-play {
   top: 25%;
   left: 30%;
   transition: 0.5s ease;
-  opacity: 0;
+  display: none;
   position: absolute;
   text-align: center;
 }
-.card-img:hover .video-play {
-  opacity: 1;
+.card-img .video-play:hover {
+  display: block;
 }
 .page-content .card-body .card-title {
   font-weight: 500;
